# enum-map

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.lock.license  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
.reuse/: dep5
enum-map/: Cargo.toml  README.md
enum-map-derive/: Cargo.toml  LICENSES  README.md
enum-map-derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
enum-map-internals/: Cargo.toml
enum-map-internals/src/: iter.rs  lib.rs
enum-map/src/: arbitrary.rs  enum_map_impls.rs  enummap_impls.rs  implementations.rs  internal.rs  iter.rs  lib.rs  serde.rs
enum-map/tests/: bool.rs  debug.rs  discriminants.rs  extend.rs  huge_enum.rs  iterator.rs  macro.rs  serde.rs  serde_json.rs  test.rs  u8.rs  void.rs
