[package]
name = "enum-map-derive"
version = "0.5.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/enum-map"
license = "MIT/Apache-2.0"
description = "Macros 1.1 implementation of #[derive(Enum)]"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]

[badges]
gitlab = { repository = "KonradBorowski/enum-map" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.48", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
enum-map = { path = "../enum-map" }
