[package]
name = "enum-map-derive"
version = "0.11.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/xfix/enum-map"
license = "MIT OR Apache-2.0"
description = "Macros 1.1 implementation of #[derive(Enum)]"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.7"
syn = { version = "2.0.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
enum-map = { path = "../enum-map" }
