[package]
name = "enum-map"
version = "0.2.32"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/enum-map"
license = "MIT/Apache-2.0"
description = "A map with C-like enum keys represented internally as an array"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/enum-map"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
array-macro = "1.0.0"
serde = { version = "1.0.0", optional = true, features = ["derive"] }
enum-map-derive = { version = "0.2.4", path = "../enum-map-derive" }
reexport-proc-macro = "1.0.0"

[dev-dependencies]
serde_test = "1.0.15"
serde_json = "1.0.2"

[package.metadata.docs.rs]
features = ["serde"]
