[package]
name = "enum-map"
version = "0.6.4"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2018"
repository = "https://gitlab.com/KonradBorowski/enum-map"
license = "MIT/Apache-2.0"
description = "A map with C-like enum keys represented internally as an array"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/enum-map"
readme = "README.md"

[badges]
gitlab = { repository = "KonradBorowski/enum-map" }
maintenance = { status = "actively-developed" }

[dependencies]
array-macro = "1.0.4"
enum-map-derive = { version = "0.4.0", path = "../enum-map-derive" }
serde = { version = "1.0.16", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.0.0"
serde_derive = "1.0.0"
serde_test = "1.0.19"
serde_json = "1.0.2"

[package.metadata.docs.rs]
features = ["serde"]
