[package]
name = "enum-map"
version = "2.6.2"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/xfix/enum-map"
license = "MIT OR Apache-2.0"
description = "A map with C-like enum keys represented internally as an array"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/enum-map"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
arbitrary = { version = "1.0.0", optional = true }
enum-map-derive = { version = "0.13.0", path = "../enum-map-derive" }
serde = { version = "1.0.16", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_test = "1.0.19"
serde_json = "1.0.2"

[package.metadata.docs.rs]
features = ["arbitrary", "serde"]
